# lucif-bot

./: main.py  pyproject.toml
lucif/: bot.py  loader.py
lucif/cogs/: actions.py  economy.py  handle_err.sex
lucif/defaults/: lucif.py
lucif/utils/pretty_help/: pretty_help.py
