[tool.poetry]
name = "lucif-bot"
version = "0.0.1"
description = "barb is gay"
authors = ["Pedro Antonio <anomalityinbox@gmail.com>"]
license = "GNU GPL V3"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.3"
cogwatch = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
